--- a/less/variables.less
+++ b/less/variables.less
@@ -1,6 +1,6 @@
 // Typography
 @bodyFamily:          "Helvetica Neue", "Helvetica", @jui-ffDefault;
-@bodyColor:           lighten(@black,10%);
+@bodyColor:           #000;
 @bodySize:            1em; /* 16px */
 @bodyBaseline:        1.618; /* 24px */
 
