--- a/less/layouts.less
+++ b/less/layouts.less
@@ -1,19 +1,31 @@
 // ==========================================================
-// Layout
+// Layouts
 // ==========================================================
-.layout() when(ispercentage(@gridColumnWidth)) {
-    .atk-wrapper {.box-sizing();min-width:980px;padding-left:@gridGutterWidth;padding-right:@gridGutterWidth;}
+// Flexible Layout (credit: Pixel vs. Bytes)
+html, body  {
+	height: 100%; /* INFO Optional CSS for a sticky footer */
 }
-.layout() {}
-.layout();
-
-.footerSticky() when (@footerSticky = true) {
-    html {height:100%;}
-    body {min-height:100%;height:100%;}
-    body #atk-layout {height:auto !important;height:100%;min-height:100%;}
-    body #atk-layout #atk-footer-guard {clear:both;}
-    #footer {height:@footerHeight;margin-top:-@footerHeight;}
-    #atk-footer-guard {height:@footerHeight+@margin;}
+.atk-layout {
+	.box-sizing;
+	display: table;
+	height: 100%;
+	width: 100%;
+	>.atk-layout-row {
+		display: table-row;
+		height: 1px;
+		&.fluid {
+			height: auto;
+		}
+	}
+	>.atk-layout-column {
+		display: table-cell;
+		min-width: 1px;
+		vertical-align: top;
+		&.fluid {
+			width: auto;
+		}
+	}
+	body>& {
+		table-layout: fixed; /* NOTE Speed up table rendering */
+	}
 }
-.footerSticky() when (@footerSticky = false) { }
-.footerSticky();
