--- a/less/typography.less
+++ b/less/typography.less
@@ -23,6 +23,9 @@ h1, h2, h3, h4, h5, h6 {
     line-height: 1;
     text-rendering: optimizeLegibility; /*  voodoo to enable ligatures and kerning | https://developer.mozilla.org/en-US/docs/CSS/text-rendering */
     margin: @margin*1.5 0 @margin/2 0;
+    &:first-child {
+        margin-top: 0;
+    }
     + .atk-form {
         margin-top: @margin;
     }
@@ -45,7 +48,7 @@ h3, .kilo {
 h4, .hecto {
     font-size: @bodySize * 1.164;
 }
-h5, .deka {
+h5, .deca {
     font-size: @bodySize;
 }
 h6, small, .deci {
@@ -58,7 +61,7 @@ h6, small, .deci {
 // ==========================================================
 
 // Make images responsive
-figure img{
+figure img {
     display:block;
     height: auto;
     width: 100%;
@@ -73,11 +76,22 @@ figcaption {
 
 
 // ==========================================================
-// = Lists
+// Lists
 // ==========================================================
 
 ul, ol, dl {
     margin: 0 0 @bodyBaseline 0;
+}
+ul, ol {
+    &.clean {
+        margin-left: 0;
+        padding-left: 0;
+        list-style-type: none;
+        ul, ol {
+            list-style-type: none;
+            padding-left: 1em;
+        }
+    }
 }
 
 
@@ -147,7 +161,7 @@ pre {
     cursor: default;
     display: block;
     font-family: monospace, serif;
-    .deka;
+    .deca;
     font-style: normal;
     font-variant: normal;
     font-weight: normal;
@@ -226,4 +240,7 @@ hr {
     width: 100%;
     height: 1px;
     clear: both;
+    &.small {
+        margin: @margin/2 0;
+    }
 }
