--- a/less/variables.less
+++ b/less/variables.less
@@ -40,7 +40,8 @@
 @error:             #e51717;    // Error color
 @lightGray:         lighten(@black,60%);    // Used for comments
 @lightestGray:      lighten(@black,90%);    // Used for background of readonly fields
-@cornerRadius:      @jui-cornerRadius;      // Global corner radius
+// @cornerRadius:      @jui-cornerRadius;      // Global corner radius
+@cornerRadius: 3px;
 
 // Typography
 // ----------
