--- a/css/agiletoolkit.less
+++ b/css/agiletoolkit.less
@@ -6,10 +6,11 @@
 
 @import '../less/gridpak.less'; /* To generate your own grid system use www.gridpak.com */
 @import '../less/grid-old.less'; /* Grid system from Agile Toolkit 4.2. Required to maintain some of the components. */
-@import '../less/layouts.less';
 
+@import '../less/layouts.less'; /* Should be merged */
 @import '../less/typography.less';
-@import '../less/components.less'; /* Buttons, Tables, etc. */
+@import '../less/components.less'; /* Colors, Boxes, Buttons, Tables, etc. */
+@import '../less/widgets.less'; /* Colors, Boxes, Buttons, Tables, etc. */
 @import '../less/forms.less';
 @import '../less/misc.less';
 
