Added .atk-label and .atk-component-* components. Styled .example for playgorund.

--- a/css/agiletoolkit-custom.css
+++ b/css/agiletoolkit-custom.css
@@ -8,3 +8,4 @@ strong{font-weight:500}
 #atk-nav{background:#ecf0f1;border-right:1px solid #cfd9db;padding-top:3.236rem;padding-bottom:3.236rem}#atk-nav ul{margin:0}
 #atk-content{background:#fff;padding:3.236rem}
 #atk-footer{background:#ecf0f1;border-top:1px solid #cfd9db;padding:1.618rem}
+.example{background:none;border:1px solid #ecf0f1}
