--- a/css/agiletoolkit-custom.less
+++ b/css/agiletoolkit-custom.less
@@ -71,3 +71,10 @@ strong {
 	border-top: 1px solid darken(@smoke, 10%);
 	padding: @margin;
 }
+
+
+// Various
+.example {
+	background: none;
+	border: 1px solid @smoke;
+}
