--- a/less/variables.less
+++ b/less/variables.less
@@ -11,6 +11,18 @@
 // General
 @margin: 1rem * @bodyBaseline;
 
+// Colors & Effects
+@colorBlue:       rgb(90, 198, 255);
+@colorPink:       rgb(255, 130, 130);
+@colorGreen:      rgb(160, 236, 111);
+@colorYellow:     rgb(253, 235, 117);
+@colorLightGray:  rgb(241, 241, 242);
+@effectSuccess:   #ccffdb;
+@effectWarning:   #fcffcc;
+@effectDanger:    #ffcccc;
+@effectInfo:      #cceeff;
+
+
 @import "jui-variables.less";
 
 
